<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Parse Login</string>
    <string name="activity_signup">Parse SignUp</string>
    <string name="action_settings">Settings</string>
    <string name="activity_forgot">Parse Reset Password</string>

    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="email">Email</string>

    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Your Password?</string>
    <string name="save">Save</string>


</resources>
